# pix-qrcode

backend/: pyproject.toml
backend/src/api/app/: app.py
backend/src/api/controllers/: create_qr_code.py  get_qr_code.py
backend/src/api/controllers/dto/: qrcode.py
backend/src/core/: generator.py  get_qr_code.py
backend/src/core/dto/: generate_pix.py
backend/tests/: main.py
frontend/pix/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/pix/src/app/: globals.css  layout.tsx  page.tsx
frontend/pix/src/app/@types/: loading.ts  login.ts  products.ts  qrcode.ts  user.ts
frontend/pix/src/app/components/: BasePage.tsx  Button.tsx  ButtonLogin.tsx  ButtonPayment.tsx  Carousel.tsx  CarouselHome.tsx  Forms.tsx  FormsKeyValue.tsx  FormsLoginSignup.tsx  FormsQrCode.tsx  Header.tsx  ListImages.tsx  Modal.tsx  MyList.tsx  QrcodeModal.tsx  TextInput.tsx
frontend/pix/src/app/components/hooks/: useAuth.ts  useHeader.ts  useQrcodeModal.ts
frontend/pix/src/app/components/ui/: button.tsx  carousel.tsx
frontend/pix/src/app/data/: qrcode-data.ts
frontend/pix/src/app/lib/: actions.tsx  utils.ts
frontend/pix/src/app/login/: page.tsx
frontend/pix/src/app/my-list/: page.tsx
frontend/pix/src/app/payment/sucess/: page.tsx
frontend/pix/src/app/service/: apiService.ts
frontend/pix/src/app/templates/: page.tsx
frontend/pix/src/app/utils/: inputMask.ts
